Fix aspect ratio on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -95,9 +95,8 @@ main > *:not(.lightbox-wrapper) {
 }
 
 .thumbnail img {
-  width: auto;
+  width: 100%;
   height: auto;
-  max-width: 100%;
   max-height: 300px;
   border-radius: 10px;
   border: 1px solid #cecece;
@@ -245,6 +244,14 @@ footer a:active {
 }
 
 @media screen and (max-width: 680px) {
+  .thumbnail img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    border: 1px solid #cecece;
+    cursor: pointer;
+  }
+
   .lightbox-main {
     display: grid;
     grid-template-columns: auto auto auto auto;
